--- a/app/globals.css
+++ b/app/globals.css
@@ -91,4 +91,8 @@
     input[type="number"].no-spin-buttons {
         -moz-appearance: textfield !important;
     }
+
+    .interactive {
+        @apply hover:bg-[#b81a5d]/25 hover:transition-colors;
+    }
 }
