--- a/styles/dayCalendar.css
+++ b/styles/dayCalendar.css
@@ -1,5 +1,11 @@
 .rdp {
     margin: 0;
+
+    position: sticky;
+    top: 0;
+    background-color: white;
+    /*border-radius: 10px;*/
+    @apply rounded-b-md;
 }
 
 .rdp-months {
